added comments for HTML and CSS changes

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+    
+<!--Renamed webpage title to represent the company-->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon</title>
 </head>
 
+<!--Changes to header included removing the unordered list elements, changed the initial div element
+to 'header', and streamlined the anchor elements-->
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -16,10 +19,14 @@
             <a href="#social-media-marketing">Social Media Marketing</a>
         </div>
     </header>
-    
+
+<!--Added main section to identify content section, removed 'hero' class and linked the image
+with HTML elements, added two section classes for the main content and side content, added new class
+attributes to streamline CSS styling, and streamlined code for an easier flow.-->
     <main>
         <img id="meeting" src="assets/images/digital-marketing-meeting.jpg" alt="digital marketing meeting">
         <section class="content">
+
             <div class="header">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
                 <h2 class="heading">Search Engine Optimization</h2>
@@ -37,9 +44,14 @@
                 <h2 class="heading">Social Media Marketing</h2>
                 <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
             </div>
+
         </section>
 
+<!--Added section 'sidebar' to differentiate between main content and side content, revised
+class attributes to eliminate repeating CSS code, and separated div elements to more easily see
+various content sections-->
         <section class="sidebar">
+
             <div class="benefit">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" />
@@ -57,6 +69,7 @@
                 <img src="./assets/images/cost-management.png" />
                 <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
             </div>
+
         </section>
 
         <div class="footer">
